cabal-version:      3.0
name:               julia
version:            0.1.0.0
description:        Julia set representation
license:            MIT
license-file:       LICENSE
author:             Javier R
maintainer:         javier.rios-urbano@epitech.eu
category:           Graphics
build-type:         Simple

common warnings
    ghc-options: -Wall

executable julia
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.0.0, JuicyPixels ^>=3.3.8
    hs-source-dirs:   app
    default-language: Haskell2010
